--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ body {
 	height: 20px;
 	text-align: center;
 	border-radius: 5px;
+	margin-left: 8px;
 }
 
 .add-to-cart-button:hover {
@@ -197,6 +198,7 @@ body {
 	height: 30px;
 	background-color: aliceblue;
 	margin-bottom: 5px;
+	margin-left: 8px;
 }
 
 .weight-dropdown select {
@@ -224,6 +226,7 @@ body {
 	height: 30px;
 	background-color: aliceblue;
 	vertical-align: top;
+	margin-left: 8px;
 }
 
 .quantity input {
@@ -244,7 +247,8 @@ body {
 	border-color: #d1a030;
 }
 
-#loadMoreButton {
+#nonVegLoadMoreButton,
+#vegLoadMoreButton {
 	background-color: #6f735c;
 	color: #fff;
 	font-family: "Matangi", sans-serif;
@@ -555,7 +559,8 @@ footer p:nth-child(2) {
 	right: -2.3rem;
 }
 
-.hidden {
+.hidden-nonveg,
+.hidden-veg {
 	display: none;
 }
 
